--- a/src/components/ui/footer/style.module.scss
+++ b/src/components/ui/footer/style.module.scss
@@ -7,7 +7,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
+}
+
+.footer_logo {
+    width: 30px;
+    height: 30px;
 }
 
 .footer_address, .footer_copyright {
