--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -31,6 +31,8 @@
     .hero_subtitle {
         font-size: 40px;
         letter-spacing: 2px;
+
+        color: $text-subtle;
     }
 
     .hero_description {
@@ -90,14 +92,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: $spacing-16;
+    gap: $spacing-10;
 }
 
 .coming_soon {
     color: $text-subtle;
-    font-weight: 500;
-    text-align: center;
-    font-size: 18px;
 }
 
 .countdown {
