--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -113,9 +113,118 @@
     text-align: center;
 }
 
+.hero_flag {
+    position: absolute;
+    top: -30px;
+    left: calc(50% + 70px);
+    transform: translateX(-50%);
+    object-fit: contain;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.hero_flag_green {
+    position: absolute;
+    top: 30px; // 위치 약간 다르게
+    left: calc(50% - 160px);
+    transform: translateX(-50%);
+    object-fit: contain;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.flag_wrap {
+    position: absolute;
+    top: -30px;
+    left: calc(50% + 70px);
+    transform: translateX(-50%);
+    z-index: 3;
+    width: 120px; // 기본 크기, 실제 렌더링에서 img 크기에 맞게 겹침
+    height: 120px;
+}
+
+.flag_wrap_green {
+    position: absolute;
+    top: -20px; // 위치 약간 다르게
+    left: calc(50% - 120px);
+    transform: translateX(-50%);
+    z-index: 3;
+    width: 120px;
+    height: 120px;
+}
+
+.flag_lottie {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.flag_text {
+    position: absolute;
+    top: 25px;
+    left: -40px;
+}
+
+.flag_text_green {
+    position: absolute;
+    top: 18px;
+    left: -20px;
+}
+
+@media (max-width: 1440px) {
+    .hero_flag {
+        top: 0px;
+    }
+    .hero_flag_green {
+        top: 40px;
+    }
+}
+
+@media (max-width: 1240px) {
+    .hero_flag {
+        top: 20px;
+    }
+    .hero_flag_green {
+        top: 60px;
+    }
+}
+
+@media (max-width: 1110px) {
+    .hero_flag {
+        top: 40px;
+        left: calc(50% + 50px);
+    }
+    .hero_flag_green {
+        top: 90px;
+        left: calc(50% - 120px);
+    }
+}
+
+@media (max-width: 970px) {
+    .hero_flag {
+        top: 65px;
+        left: calc(50% + 40px);
+    }
+    .hero_flag_green {
+        top: 100px;
+        left: calc(50% - 90px);
+    }
+}
+
 @media (max-width: 768px) {
     .hero {
         padding: $spacing-32 $padding;
+    }
+
+    .hero_flag {
+        top: 40px;
+    }
+    .hero_flag_green {
+        top: 50px;
+        left: calc(50% - 100px);
     }
     
     .hero_text {
