--- a/src/components/home/money/style.module.scss
+++ b/src/components/home/money/style.module.scss
@@ -274,6 +274,17 @@
         color: $text-subtle;
         min-width: 48px;
     }
+
+    // 카드 내 "상품" 행(각 카드의 마지막 행) 값 우측 정렬
+    .card {
+        .card_row:last-child {
+            // 값 요소가 라벨 다음에 오므로, 해당 요소를 넓혀 우측 정렬
+            .label + * {
+                flex: 1;
+                text-align: right;
+            }
+        }
+    }
 }
 
 // 기존 goods 스타일 제거 (캐러셀로 대체됨)
