--- a/src/components/home/money/style.module.scss
+++ b/src/components/home/money/style.module.scss
@@ -188,8 +188,8 @@
     justify-content: center;
 
     img {
-        width: 120px;
-        height: 120px;
+        width: auto;
+        height: 130px;
         object-fit: contain;
         border-radius: 12px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -212,6 +212,13 @@
 
 // 모바일 최적화
 @media (max-width: 768px) {
+
+    .carousel_slide {
+        img {
+            width: auto;
+            height: 100px;
+        }
+    }
     .table {
         th, td {
             font-size: 16px;
