--- a/src/components/articles/article-detail/style.module.scss
+++ b/src/components/articles/article-detail/style.module.scss
@@ -20,6 +20,11 @@
     font-weight: 700;
     line-height: 1.2;
     margin: 0;
+
+    display: flex;
+    align-items: center;
+    
+    gap: $spacing-8;
 }
 
 .date {
