Refactor styles and enhance components: update border styles in About section, add recent post tag in Contact component, improve image container responsiveness in Gallery, and adjust prize display formatting in Money component for better readability.

--- a/src/components/home/about/style.module.scss
+++ b/src/components/home/about/style.module.scss
@@ -98,7 +98,7 @@
     .history_wrap {
         width: 100%;
         flex-direction: column;
-        border-bottom: none;
+        border-bottom: 0px;
         border-left: 2px solid $border-default;
         border-style: dashed;
         padding-left: 24px;
