--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -105,7 +105,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    padding: 8px;
+    padding: 8px 0 8px 8px;
     color: $text-default;
     
     &:hover {
