--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -194,6 +194,7 @@
         &:nth-child(2) { transition-delay: 0.2s; }
         &:nth-child(3) { transition-delay: 0.3s; }
         &:nth-child(4) { transition-delay: 0.4s; }
+        &:nth-child(5) { transition-delay: 0.5s; }
         
         &:hover {
             color: #ccc;
